# cocos2d-x-3.16

./: CMakeLists.txt  README.md
cmake/Modules/: BuildModules.cmake  CocosUsePrebuiltLibs.cmake  SelectModule.cmake  SetCompilerOptions.cmake
cocos/: Android.mk  CMakeLists.txt  cocos2d.h
cocos/2d/: CCAction.cpp  CCAction.h  CCActionCamera.h  CCActionGrid.h  CCActionGrid3D.h  CCActionInstant.cpp  CCActionInstant.h  CCActionInterval.cpp  CCActionInterval.h  CCActionTiledGrid.h  CCAnimation.h  CCAtlasNode.h  CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.cpp  CCCameraBackgroundBrush.h  CCClippingNode.cpp  CCClippingNode.h  CCComponent.cpp  CCComponent.h  CCDrawNode.cpp  CCDrawNode.h  CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCFontAtlas.cpp  CCFontAtlas.h  CCFontFreeType.h  CCLabel.cpp  CCLabel.h  CCLabelAtlas.cpp  CCLabelAtlas.h  CCLabelBMFont.cpp  CCLabelBMFont.h  CCLayer.cpp  CCLayer.h  CCLight.h  CCMenu.cpp  CCMenu.h  CCMenuItem.cpp  CCMenuItem.h  (+24 more)
cocos/2d/libcocos2d_win10/: libcocos2d.vcxproj  libcocos2d.vcxproj.filters
cocos/2d/win10_props/: cocos2d_win10.props
cocos/3d/: Android.mk  CCAnimate3D.h  CCAnimation3D.h  CCAnimationCurve.h  CCAttachNode.h  CCBillBoard.h  CCBundle3D.h  CCMesh.h  CCMeshSkin.h  CCMeshVertexIndexData.h  CCMotionStreak3D.h  CCSkeleton3D.h  CCSkybox.h  CCSprite3D.cpp  CCSprite3D.h  CCSprite3DMaterial.h  CCTerrain.cpp  CCTerrain.h  CMakeLists.txt  Sprite3DCache.cpp  Sprite3DCache.h
cocos/audio/: AudioEngine.cpp
cocos/base/: CCAsyncTaskPool.h  CCConfiguration.cpp  CCConsole.cpp  CCConsole.h  CCController-apple.mm  CCDirector.cpp  CCDirector.h  CCEvent.h  CCEventDispatcher.cpp  CCEventDispatcher.h  CCEventListener.h  CCEventListenerAcceleration.h  CCEventListenerCustom.h  CCEventListenerFocus.h  CCEventListenerKeyboard.h  CCEventListenerMouse.h  CCEventListenerTouch.h  CCProtocols.h  CCRef.cpp  CCRef.h  CCScheduler.cpp  CCScheduler.h  CCStencilStateManager.cpp  CCUserDefault.h  CMakeLists.txt  MVPMatManager.cpp  MVPMatManager.h  ZipUtils.h  ccConfig.h  ccMacros.h  ccRandom.h  ccUtils.cpp  ccUtils.h
cocos/deprecated/: CCArray.cpp  CCArray.h  CCBool.h  CCDeprecated.cpp  CCDeprecated.h  CCDictionary.cpp  CCDictionary.h  CCDouble.h  CCFloat.h  CCInteger.h  CCNotificationCenter.cpp  CCSet.cpp  CCSet.h  CCString.cpp  CCString.h  CMakeLists.txt
cocos/math/: Vec2.cpp  Vec2.h  Vec3.h  Vec3.inl
cocos/network/: HttpRequest.h
cocos/physics/: CCPhysicsBody.cpp  CCPhysicsBody.h  CCPhysicsContact.cpp  CCPhysicsContact.h  CCPhysicsHelper.h  CCPhysicsJoint.cpp  CCPhysicsJoint.h  CCPhysicsShape.cpp  CCPhysicsShape.h  CCPhysicsWorld.cpp  CCPhysicsWorld.h
cocos/physics3d/: CCPhysics3DComponent.cpp
cocos/platform/: CCApplication.h  CCApplicationProtocol.h  CCCommon.h  CCFileUtils.cpp  CCGL.h  CCGLView.cpp  CCGLView.h  CCImage.cpp  CCImage.h  CCPlatformConfig.h  CCPlatformDefine.h  CCPlatformMacros.h  CCStdC.h  CMakeLists.txt
cocos/renderer/: CCFrameBuffer.cpp  CCFrameBuffer.h  CCGLProgram.cpp  CCGLProgramState.cpp  CCGLProgramState.h  CCMaterial.cpp  CCMaterial.h  CCMeshCommand.cpp  CCMeshCommand.h  CCPass.cpp  CCPass.h  CCQuadCommand.cpp  CCRenderCommand.h  CCRenderState.cpp  CCRenderState.h  CCRenderer.cpp  CCRenderer.h  CCTechnique.cpp  CCTechnique.h  CCTexture2D.h  CCTextureCube.h  CCVertexIndexBuffer.cpp  CCViewPort.cpp  CCViewPort.h  CMakeLists.txt  ccGLStateCache.cpp  ccShaders.cpp
cocos/ui/: UILayout.cpp  UILayout.h  UILayoutParameter.h  UIScrollView.cpp  UITextField.cpp  UIWidget.cpp  UIWidget.h
docs/: doxygen.config  doxygen_white_book.config
extensions/: Android.mk  CMakeLists.txt  cocos-ext.h
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt
tests/cpp-tests/: CMakeLists.txt  test1.txt
tests/cpp-tests/Classes/: AppDelegate.cpp  AppDelegate.h  BaseTest.cpp  controller.cpp  testBasic.h  tests.h
tests/cpp-tests/Classes/ActionsTest/: ActionsTest.cpp
tests/cpp-tests/Classes/BugsTest/: BugsTest.cpp
tests/cpp-tests/Classes/Camera3DTest/: Camera3DTest.cpp  Camera3DTest.h
tests/cpp-tests/Classes/CocosDenshionTest/: CocosDenshionTest.cpp
tests/cpp-tests/Classes/ConsoleTest/: ConsoleTest.cpp
tests/cpp-tests/Classes/DownloaderTest/: DownloaderTest.cpp
tests/cpp-tests/Classes/EffectsTest/: EffectsTest.cpp  EffectsTest.h
tests/cpp-tests/Classes/ExtensionsTest/: ExtensionsTest.cpp
tests/cpp-tests/Classes/IntervalTest/: IntervalTest.cpp
tests/cpp-tests/Classes/LayerTest/: LayerTest.cpp  LayerTest.h
tests/cpp-tests/Classes/MaterialSystemTest/: MaterialSystemTest.cpp
tests/cpp-tests/Classes/MenuTest/: MenuTest.cpp
tests/cpp-tests/Classes/NavMeshTest/: NavMeshTest.cpp  NavMeshTest.h
tests/cpp-tests/Classes/NewAudioEngineTest/: NewAudioEngineTest.cpp
tests/cpp-tests/Classes/NewRendererTest/: NewRendererTest.cpp
tests/cpp-tests/Classes/NodeTest/: NodeTest.cpp
tests/cpp-tests/Classes/Scene3DTest/: Scene3DTest.cpp  Scene3DTest.h
tests/cpp-tests/Classes/SchedulerTest/: SchedulerTest.cpp  SchedulerTest.h
tests/cpp-tests/Classes/ShaderTest/: ShaderTest.cpp  ShaderTest.h  ShaderTest2.cpp  ShaderTest2.h
tests/cpp-tests/Classes/Sprite3DTest/: Sprite3DTest.cpp  Sprite3DTest.h
tests/cpp-tests/Classes/SpritePolygonTest/: SpritePolygonTest.cpp  SpritePolygonTest.h
tests/cpp-tests/Classes/TerrainTest/: TerrainTest.cpp  TerrainTest.h
tests/cpp-tests/Classes/Texture2dTest/: Texture2dTest.cpp
tests/cpp-tests/Classes/UITest/CocoStudioGUITest/: CocosGUIScene.cpp
tests/cpp-tests/Classes/VibrateTest/: VibrateTest.cpp
tests/cpp-tests/Resources/Presentation/: stack.graffle
tests/cpp-tests/Resources/configs/: config-example.plist  config-test-ok.plist
tests/cpp-tests/proj.android-studio/app/jni/: Android.mk  Application.mk
tests/cpp-tests/proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
tests/cpp-tests/proj.android/jni/: Android.mk  Application.mk
tests/cpp-tests/proj.android/libs/armeabi/: gdb.setup
tests/cpp-tests/proj.win10/: cpp-tests.vcxproj  cpp-tests.vcxproj.filters
tests/cpp-tests/proj.win32/: cpp-tests.vcxproj  cpp-tests.vcxproj.filters
(+75 files in other folders)
